<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PruebaInterfaces</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_relative">Relative</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="title_activity_linear_men">LinearMen</string>
    <string name="To">To</string>
    <string name="Subject">Subject</string>
    <string name="Message">Message</string>
    <string name="Send">Send</string>
    <string name="title_activity_relative_men">RelativeMen</string>

</resources>
